[bumpversion]
current_version = 0.1.1

[metadata]
version = 0.1.0
name = citellus
summary = Utility for running set of tests against a Live System or a snapshot/sosreport
description-file = README.md
license = Apache Software License
classifiers = 
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
author = Robin Černín
author-email = rcernin@redhat.com
home-page = https://github.com/zerodayz/citellus

[files]
packages = 
	citellusclient
	maguiclient
scripts = 
	citellus.py
	magui.py

[entry_points]

[nosetests]
detailed-errors = 1
with-coverage = 1
cover-package = 
	citellusclient
	maguiclient
cover-erase = 1
verbosity = 2

[extract_messages]
input_dirs = citellusclient, maguiclient
output_file = citellusclient/locale/citellus.pot

