[metadata]
version = 1.0.7
name = risu
summary = Utility for running set of tests against a Live System or a snapshot/sosreport
description_file = README.rst
license = GPL3
classifiers =
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Customer Service
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Intended Audience :: Telecommunications Industry
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Unix Shell
	Topic :: Security
	Topic :: System
	Topic :: Utilities
author = Robin Černín
author_email = cerninr@gmail.com
home_page = https://github.com/risuorg/risu
package_data={
	'risu': ['*.html'],
   },
include_package_data=True,

[files]
packages =
	risuclient
	maguiclient

scripts =
	risu.py
	magui.py
	risu.py


[entry_points]

[nosetests]
detailed-errors = 1
with-coverage = 1
cover-package =
	risuclient
	maguiclient
cover-erase = 1
verbosity = 2

[extract_messages]
input_dirs = risuclient, maguiclient
output_file = risuclient/locale/risu.pot
